<resources>
    <string name="app_name">Server Monitoring App</string>
    <string name="show_history">Show History</string>
    <string name="settings">Settings</string>
    <string name="settings_temperature">Change Threshold Temperature</string>
    <string name="settings_file_path">Change File Path</string>
    <string name="settings_notification">Notification Settings</string>
    <string name="settings_database">Reset Database</string>
    <string name="current_temperature_threshold">Current Temperature Threshold</string>
    <string name="select_temperature_threshold">Select New Temperature Threshold</string>
    <string name="current_file_path">Current File Path</string>
    <string name="enter_file_path">Enter New File Path</string>
    <string name="confirm">Confirm</string>
    <string name="close">Close</string>
    <string name="clear_database_alert">Are you sure you want to clear all the data records from the database?</string>
</resources>
